tool/tests/snapshots/dotnet_target__option_types@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct
{
    private Raw.MyStruct _inner;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from the raw representation.
    /// </summary>
    public unsafe MyStruct(Raw.MyStruct data)
    {
        _inner = data;
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.MyStruct AsFFI()
    {
        return _inner;
    }
}

