tool/tests/snapshots/dotnet_target__optional_param@Bar.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class Bar: IDisposable
{
    private unsafe Raw.Bar* _inner;

    /// <summary>
    /// Creates a managed <c>Bar</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// </remarks>
    /// <remarks>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe Bar(Raw.Bar* handle)
    {
        _inner = handle;
    }

    public void Something(Foo? foo)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("Bar");
            }
            Raw.Foo* fooRaw;
            if (foo == null)
            {
                fooRaw = null;
            }
            else
            {
                fooRaw = foo.AsFFI();
                if (fooRaw == null)
                {
                    throw new ObjectDisposedException("Foo");
                }
            }
            Raw.Bar.Something(_inner, fooRaw);
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.Bar* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.Bar.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~Bar()
    {
        Dispose();
    }
}

